--- a/TakeBackChatter/en.lproj/MainMenu.xib
+++ b/TakeBackChatter/en.lproj/MainMenu.xib
@@ -1372,7 +1372,6 @@
 											<int key="NSvFlags">274</int>
 											<string key="NSFrameSize">{457, 658}</string>
 											<reference key="NSSuperview" ref="1046909839"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="507176809"/>
 											<string key="NSMinGridSize">{0, 0}</string>
 											<string key="NSMaxGridSize">{0, 0}</string>
@@ -1395,7 +1394,6 @@
 									</object>
 									<string key="NSFrame">{{1, 1}, {457, 658}}</string>
 									<reference key="NSSuperview" ref="924085197"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="984699239"/>
 									<reference key="NSDocView" ref="984699239"/>
 									<object class="NSColor" key="NSBGColor" id="232743822">
@@ -1414,7 +1412,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{234, 1}, {15, 143}}</string>
 									<reference key="NSSuperview" ref="924085197"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="681642928"/>
 									<reference key="NSTarget" ref="924085197"/>
 									<string key="NSAction">_doScroller:</string>
@@ -1426,8 +1423,7 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{1, 144}, {233, 15}}</string>
 									<reference key="NSSuperview" ref="924085197"/>
-									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="128962719"/>
+									<reference key="NSNextKeyView" ref="8369497"/>
 									<int key="NSsFlags">1</int>
 									<reference key="NSTarget" ref="924085197"/>
 									<string key="NSAction">_doScroller:</string>
@@ -1436,31 +1432,29 @@
 							</object>
 							<string key="NSFrame">{{0, 37}, {459, 660}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1046909839"/>
 							<int key="NSsFlags">562</int>
 							<reference key="NSVScroller" ref="507176809"/>
 							<reference key="NSHScroller" ref="681642928"/>
 							<reference key="NSContentView" ref="1046909839"/>
 						</object>
-						<object class="NSButton" id="128962719">
+						<object class="NSButton" id="8369497">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{20, 7}, {106, 23}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<bool key="NSEnabled">YES</bool>
-							<object class="NSButtonCell" key="NSCell" id="36298125">
+							<object class="NSButtonCell" key="NSCell" id="298361601">
 								<int key="NSCellFlags">-2080244224</int>
 								<int key="NSCellFlags2">134217728</int>
 								<string key="NSContents">More ...</string>
-								<object class="NSFont" key="NSSupport" id="953199927">
+								<object class="NSFont" key="NSSupport" id="855222615">
 									<string key="NSName">LucidaGrande</string>
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">1044</int>
 								</object>
-								<reference key="NSControlView" ref="128962719"/>
+								<reference key="NSControlView" ref="8369497"/>
 								<int key="NSButtonFlags">-2033434369</int>
 								<int key="NSButtonFlags2">162</int>
 								<string key="NSAlternateContents"/>
@@ -1472,7 +1466,6 @@
 					</object>
 					<string key="NSFrame">{{7, 11}, {458, 696}}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="924085197"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {2560, 1578}}</string>
@@ -1508,7 +1501,6 @@
 						</object>
 						<string key="NSFrame">{{4, 39}, {64, 64}}</string>
 						<reference key="NSSuperview" ref="857442349"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="579147869"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="430671575">
@@ -1526,7 +1518,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{70, 86}, {241, 17}}</string>
 						<reference key="NSSuperview" ref="857442349"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="512312240"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="89093653">
@@ -1556,7 +1547,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{70, 29}, {243, 56}}</string>
 						<reference key="NSSuperview" ref="857442349"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="972719467"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="458987311">
@@ -1578,7 +1568,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{4, 9}, {153, 14}}</string>
 						<reference key="NSSuperview" ref="857442349"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="416764197"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="658150960">
@@ -1603,7 +1592,6 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{224, 9}, {89, 14}}</string>
 						<reference key="NSSuperview" ref="857442349"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="723630879"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="319873719">
@@ -1621,14 +1609,13 @@
 						<int key="NSvFlags">34</int>
 						<string key="NSFrame">{{0, -2}, {316, 5}}</string>
 						<reference key="NSSuperview" ref="857442349"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSOffsets">{0, 0}</string>
 						<object class="NSTextFieldCell" key="NSTitleCell">
 							<int key="NSCellFlags">67239424</int>
 							<int key="NSCellFlags2">0</int>
 							<string key="NSContents">Box</string>
-							<reference key="NSSupport" ref="953199927"/>
+							<reference key="NSSupport" ref="855222615"/>
 							<object class="NSColor" key="NSBackgroundColor">
 								<int key="NSColorSpace">6</int>
 								<string key="NSCatalogName">System</string>
@@ -1651,7 +1638,6 @@
 				</object>
 				<string key="NSFrameSize">{316, 108}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="501302369"/>
 			</object>
 			<object class="NSArrayController" id="842138308">
@@ -2488,22 +2474,6 @@
 					<int key="connectionID">588</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: representedObject.actorPhoto</string>
-						<reference key="source" ref="501302369"/>
-						<reference key="destination" ref="438287736"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="501302369"/>
-							<reference key="NSDestination" ref="438287736"/>
-							<string key="NSLabel">value: representedObject.actorPhoto</string>
-							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">representedObject.actorPhoto</string>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">590</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
 						<string key="label">startLogin:</string>
 						<reference key="source" ref="976324537"/>
@@ -2522,10 +2492,10 @@
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">hidden: hasMore</string>
-						<reference key="source" ref="128962719"/>
+						<reference key="source" ref="8369497"/>
 						<reference key="destination" ref="697517498"/>
 						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="128962719"/>
+							<reference key="NSSource" ref="8369497"/>
 							<reference key="NSDestination" ref="697517498"/>
 							<string key="NSLabel">hidden: hasMore</string>
 							<string key="NSBinding">hidden</string>
@@ -2543,9 +2513,25 @@
 					<object class="IBActionConnection" key="connection">
 						<string key="label">loadNextPage:</string>
 						<reference key="source" ref="697517498"/>
-						<reference key="destination" ref="128962719"/>
+						<reference key="destination" ref="8369497"/>
 					</object>
 					<int key="connectionID">600</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: representedObject.actorPhoto</string>
+						<reference key="source" ref="501302369"/>
+						<reference key="destination" ref="438287736"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="501302369"/>
+							<reference key="NSDestination" ref="438287736"/>
+							<string key="NSLabel">value: representedObject.actorPhoto</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">representedObject.actorPhoto</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">606</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -3105,7 +3091,7 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="924085197"/>
-							<reference ref="128962719"/>
+							<reference ref="8369497"/>
 						</object>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -3739,17 +3725,17 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">595</int>
-						<reference key="object" ref="128962719"/>
+						<reference key="object" ref="8369497"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="36298125"/>
+							<reference ref="298361601"/>
 						</object>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">596</int>
-						<reference key="object" ref="36298125"/>
-						<reference key="parent" ref="128962719"/>
+						<reference key="object" ref="298361601"/>
+						<reference key="parent" ref="8369497"/>
 					</object>
 				</object>
 			</object>
@@ -4330,171 +4316,9 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">600</int>
+			<int key="maxID">606</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">FeedController</string>
-					<string key="superclassName">NSObject</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">loadNextPage:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">loadNextPage:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">loadNextPage:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FeedController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSDocument</string>
-					<object class="NSMutableDictionary" key="actions">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>printDocument:</string>
-							<string>revertDocumentToSaved:</string>
-							<string>runPageLayout:</string>
-							<string>saveDocument:</string>
-							<string>saveDocumentAs:</string>
-							<string>saveDocumentTo:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>printDocument:</string>
-							<string>revertDocumentToSaved:</string>
-							<string>runPageLayout:</string>
-							<string>saveDocument:</string>
-							<string>saveDocumentAs:</string>
-							<string>saveDocumentTo:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBActionInfo">
-								<string key="name">printDocument:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">revertDocumentToSaved:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">runPageLayout:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">saveDocument:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">saveDocumentAs:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">saveDocumentTo:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSDocument.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">TakeBackChatterAppDelegate</string>
-					<string key="superclassName">NSObject</string>
-					<object class="NSMutableDictionary" key="actions">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>logout:</string>
-							<string>startLogin:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>logout:</string>
-							<string>startLogin:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBActionInfo">
-								<string key="name">logout:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">startLogin:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>feedController</string>
-							<string>window</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>FeedController</string>
-							<string>NSWindow</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>feedController</string>
-							<string>window</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">feedController</string>
-								<string key="candidateClassName">FeedController</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">window</string>
-								<string key="candidateClassName">NSWindow</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/TakeBackChatterAppDelegate.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
