resize row height as needed.

--- a/TakeBackChatter/FeedItem.xib
+++ b/TakeBackChatter/FeedItem.xib
@@ -51,7 +51,6 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{226, 6}, {89, 14}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="527082428">
 							<int key="NSCellFlags">68288064</int>
@@ -272,6 +271,14 @@
 					</object>
 					<int key="connectionID">22</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">bodyTextField</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="20630340"/>
+					</object>
+					<int key="connectionID">23</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -438,7 +445,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">22</int>
+			<int key="maxID">23</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
